force-app/main/default/objects/aig_AI_Endpoint__c/aig_AI_Endpoint__c.object-meta.xml
<CustomObject>
    <label>AI Endpoint</label>
    <nameField>
        <label>AI Endpoint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Endpoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>