force-app/main/default/objects/aig_AI_Endpoint__c/fields/aig_AI_Model__c.field-meta.xml
<CustomField>
    <fullName>aig_AI_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AI Model</label>
    <referenceTo>aig_AI_Model__c</referenceTo>
    <relationshipLabel>AI Endpoints</relationshipLabel>
    <relationshipName>aig_AI_Endpoints</relationshipName>
    <type>Lookup</type>
</CustomField>