force-app/main/default/objects/aig_AI_Endpoint__c/fields/aig_Authentication_Methods__c.field-meta.xml
<CustomField>
    <fullName>aig_Authentication_Methods__c</fullName>
    <label>Authentication Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API Key</fullName>
            </value>
            <value>
                <fullName>OAuth 2.0</fullName>
            </value>
            <value>
                <fullName>JWT (JSON Web Token)</fullName>
            </value>
            <value>
                <fullName>Basic Auth</fullName>
            </value>
            <value>
                <fullName>Bearer Token</fullName>
            </value>
            <value>
                <fullName>Client Certificates</fullName>
            </value>
            <value>
                <fullName>SAML</fullName>
            </value>
            <value>
                <fullName>OpenID Connect</fullName>
            </value>
            <value>
                <fullName>HMAC</fullName>
            </value>
            <value>
                <fullName>LDAP</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>