force-app/main/default/objects/aig_AI_Endpoint__c/fields/aig_Compliance_Standards__c.field-meta.xml
<CustomField>
    <fullName>aig_Compliance_Standards__c</fullName>
    <label>Compliance Standards</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>HIPAA</fullName>
            </value>
            <value>
                <fullName>CCPA</fullName>
            </value>
            <value>
                <fullName>ISO/IEC 27001</fullName>
            </value>
            <value>
                <fullName>SOC 2</fullName>
            </value>
            <value>
                <fullName>PCI DSS</fullName>
            </value>
            <value>
                <fullName>FERPA</fullName>
            </value>
            <value>
                <fullName>COPPA</fullName>
            </value>
            <value>
                <fullName>FISMA</fullName>
            </value>
            <value>
                <fullName>NIST</fullName>
            </value>
            <value>
                <fullName>SOX</fullName>
            </value>
            <value>
                <fullName>GLBA</fullName>
            </value>
            <value>
                <fullName>HITECH</fullName>
            </value>
            <value>
                <fullName>ITAR</fullName>
            </value>
            <value>
                <fullName>CMMC</fullName>
            </value>
            <value>
                <fullName>CSA STAR</fullName>
            </value>
            <value>
                <fullName>FDA 21 CFR Part 11</fullName>
            </value>
            <value>
                <fullName>EU-U.S. Privacy Shield</fullName>
            </value>
            <value>
                <fullName>NYDFS Cybersecurity Regulation</fullName>
            </value>
            <value>
                <fullName>BCBS 239</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>