force-app/main/default/objects/aig_AI_Endpoint__c/fields/aig_Description__c.field-meta.xml
<CustomField>
    <fullName>aig_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>