force-app/main/default/objects/aig_AI_Endpoint__c/fields/aig_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>aig_Endpoint_URL__c</fullName>
    <label>Endpoint URL</label>
    <type>Url</type>
</CustomField>