force-app/main/default/objects/aig_AI_Endpoint__c/fields/aig_Input_Formats__c.field-meta.xml
<CustomField>
    <fullName>aig_Input_Formats__c</fullName>
    <label>Input Formats</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>aig_File_Formats</valueSetName>
    </valueSet>
</CustomField>