force-app/main/default/objects/aig_AI_Endpoint__c/fields/aig_Maximum_Request_Size__c.field-meta.xml
<CustomField>
    <fullName>aig_Maximum_Request_Size__c</fullName>
    <inlineHelpText>The maximum file size or payload size allowed for each request to the AI endpoint. (e.g. 100KB, 10MB, !GB, etc.)</inlineHelpText>
    <label>Maximum Request Size</label>
    <length>25</length>
    <type>Text</type>
</CustomField>