force-app/main/default/objects/aig_AI_Endpoint__c/fields/aig_Monitoring_URL__c.field-meta.xml
<CustomField>
    <fullName>aig_Monitoring_URL__c</fullName>
    <label>Monitoring URL</label>
    <type>Url</type>
</CustomField>