force-app/main/default/objects/aig_AI_Endpoint__c/fields/aig_Request_Limit__c.field-meta.xml
<CustomField>
    <fullName>aig_Request_Limit__c</fullName>
    <inlineHelpText>The maximum number of requests that can be made to the AI endpoint within a specified time period.  (e.g. 1000 per minute, 10000 per hour, etc.)</inlineHelpText>
    <label>Request Limit</label>
    <length>25</length>
    <type>Text</type>
</CustomField>