force-app/main/default/objects/aig_AI_Endpoint__c/fields/aig_Status__c.field-meta.xml
<CustomField>
    <fullName>aig_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
                <label>⏳ Pending Approval</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <label>✅ Approved</label>
            </value>
            <value>
                <fullName>Not Approved</fullName>
                <label>⛔ Not Approved</label>
            </value>
            <value>
                <fullName>Deprecated</fullName>
                <label>✘ Deprecated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>